<resources>
    <string name="app_name">247News</string>
    <string name="headlines">Headlines</string>
    <string name="preferences">Preferences</string>
    <string name="profile">Profile</string>

    <string name="no_internet">No internet connection</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="save">Save</string>
    <string name="register">Register</string>
    <string name="select_category">Select category</string>
</resources>
